--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,15 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="399dp"
-        android:layout_weight="2"
+        android:layout_height="100dp"
+        android:layout_weight="1"
         android:gravity="end|center"
 
         >
 
         <TextView
             android:id="@+id/display"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="0"
             android:textAlignment="viewEnd"
@@ -28,39 +28,190 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnSqrt"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="√" />
+
+        <Button
+            android:id="@+id/btnSquare"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="x²" />
+
+        <Button
+            android:id="@+id/btnPow"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="xʸ" />
+
+        <Button
+            android:id="@+id/btnOneDivX"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="1/x" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnSin"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="sin" />
+
+        <Button
+            android:id="@+id/btnCos"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="cos" />
+
+        <Button
+            android:id="@+id/btnTan"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="tan" />
+
+        <Button
+            android:id="@+id/btnFactorial"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="n!" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnLn"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="ln" />
+
+        <Button
+            android:id="@+id/btnLog"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="log" />
+
+        <Button
+            android:id="@+id/btnE"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="e" />
+
+        <Button
+            android:id="@+id/btnPi"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="π" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnParentOpen"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="(" />
+
+        <Button
+            android:id="@+id/btnParentClose"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text=")" />
+
+        <Button
+            android:id="@+id/btnNegate"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="±" />
+
+        <Button
+            android:id="@+id/btnClear"
+            android:layout_width="32dp"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="#E40000"
+            android:text="C" />
+    </TableRow>
+
+
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="1dp"
-        >
+        android:layout_weight="0">
 
         <Button
             android:id="@+id/btnCE"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="CE" />
 
         <Button
             android:id="@+id/btnMR"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="MR" />
 
         <Button
             android:id="@+id/btnMmais"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="M+" />
 
         <Button
             android:id="@+id/btnMmenos"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="M-" />
@@ -70,38 +221,37 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_margin="1dp"
-        >
+        android:layout_weight="0">
 
         <Button
             android:id="@+id/btnSete"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="7" />
 
         <Button
             android:id="@+id/btnOito"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="8" />
 
         <Button
             android:id="@+id/btnNove"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="56dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="9" />
 
         <Button
             android:id="@+id/btnDividir"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="/" />
@@ -111,38 +261,37 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_margin="1dp"
-        >
+        android:layout_weight="0">
 
         <Button
             android:id="@+id/btnQuatro"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="4" />
 
         <Button
             android:id="@+id/btnCinco"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="106dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="5" />
 
         <Button
             android:id="@+id/btnSeis"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="117dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="6" />
 
         <Button
             android:id="@+id/btnVezes"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="121dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="x" />
@@ -152,38 +301,37 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_margin="1dp"
-        >
+        android:layout_weight="0">
 
         <Button
             android:id="@+id/btnUm"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="15dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="1" />
 
         <Button
             android:id="@+id/btnDois"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="2" />
 
         <Button
             android:id="@+id/btnTres"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="3" />
 
         <Button
             android:id="@+id/btnMenos"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="111dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="-" />
@@ -193,41 +341,40 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_margin="1dp"
-        >
+        android:layout_weight="0">
 
         <Button
             android:id="@+id/btnZero"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="66dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="0" />
 
         <Button
-            android:id="@+id/btnVirgula"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:text="," />
-
-        <Button
             android:id="@+id/btnResultado"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="=" />
 
         <Button
             android:id="@+id/btnMais"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="66dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:text="+" />
+
+        <Button
+            android:id="@+id/btnVirgula"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:text="," />
 
     </TableRow>
 </TableLayout>
