--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/display"
-            android:layout_width="90dp"
+            android:layout_width="134dp"
             android:layout_height="wrap_content"
             android:text="0"
             android:textAlignment="viewEnd"
@@ -41,7 +41,7 @@
             android:text="√" />
 
         <Button
-            android:id="@+id/btnSquare"
+            android:id="@+id/btnQuadrado"
             android:layout_width="32dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
@@ -49,7 +49,7 @@
             android:text="x²" />
 
         <Button
-            android:id="@+id/btnPow"
+            android:id="@+id/btnPotencia"
             android:layout_width="32dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
